package enduser

import "time"

// EndUserSession represents a refresh token session for an end-user.
// Stored in mc_meta.end_user_accounts with tenant scope (org_name).
type EndUserSession struct {
	ID               string    // UUID, primary key
	UserID           string    // FK to users.id
	RefreshTokenHash string    // sha256(opaqueToken), indexed, no plaintext stored
	ExpiresAt        time.Time // expiration time (created_at + 7d)
	Revoked          bool      // whether the session has been revoked
	CreatedAt        time.Time
}

// NewEndUserSession creates a new session with the given token hash.
// opaqueToken should be generated by the caller and hashed before passing here.
func NewEndUserSession(id, userID, refreshTokenHash string, expiresAt time.Time) *EndUserSession {
	return &EndUserSession{
		ID:               id,
		UserID:           userID,
		RefreshTokenHash: refreshTokenHash,
		ExpiresAt:        expiresAt,
		Revoked:          false,
		CreatedAt:        time.Now(),
	}
}

// Invalidate revokes the session (logout / token rotation).
func (s *EndUserSession) Invalidate() {
	s.Revoked = true
}

// IsExpired returns whether the session has expired.
func (s *EndUserSession) IsExpired() bool {
	return time.Now().After(s.ExpiresAt)
}

// IsValid returns whether the session can be used (not revoked and not expired).
func (s *EndUserSession) IsValid() bool {
	if s == nil {
		return false
	}
	if s.ID == "" || s.UserID == "" || s.RefreshTokenHash == "" {
		return false
	}
	if s.Revoked {
		return false
	}
	return !s.IsExpired()
}
